# xshaper

./: .header.yaml  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: check-sources.yml  package.yml
docs/: conf.py  index.rst  model.rst  recording.rst  requirements.txt
xshaper/: __init__.py  config.py  model.py  monitor.py  record.py  run.py  times.py
xshaper/cli/: __init__.py  init.py
xshaper/recorders/: compute.py  time.py
